# cinex-newsroom

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: approve.yml  daily.yml  refresh-token.yml
newsroom/: __init__.py  bot.py  branding.py  cli.py  config.py  db.py  generate.py  host.py  images.py  instagram.py  news.py  slides.py  tokens.py
state/: newsroom.db
tests/: test_branding.py  test_caption.py  test_db.py  test_generate.py  test_images.py  test_instagram.py  test_news.py  test_tokens.py
