[project]
name = "newsroom"
version = "0.1.0"
description = "Automated newsroom -> Instagram posting pipeline (fetch, generate, approve, publish)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "rapidfuzz>=3.6",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "openai>=1.30",
    "Pillow>=10.3",
    "cloudinary>=1.40",
    "python-telegram-bot>=21.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[project.scripts]
newsroom = "newsroom.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ships newsroom/assets (logo + Inter) alongside the code -- the deploy runner has
# no usable system fonts, so these must travel with the package.
packages = ["newsroom"]
